# Pseudo_Boolean_Packagemanager

./: .gitignore  CMakeLists.txt  README.md  dependencygraph.cpp  dependencygraph.h  encoder.h  main.cpp  pb_encoder.cpp
build_PBO_Manager/: CMakeCache.txt  FileToGraph2_v2  FileToGraph2_v2.cbp  Makefile  car_test.opb  car_test_new.opb  cmake_install.cmake
include/: addieren.h  pb_encoder.h  pkgversion.h
src/: addieren.cpp  dependencygraph.cpp  encoder.cpp  pkgversion.cpp
test/: car_example.txt  test.cpp  test.txt
